--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ h1{
 }
 
 .btn{
-     height: 150px;
-    width: 150px;
+ height: 150px;
+    width: 40%;
     margin-top: 20px;
     margin-left: 10px;
     border: 10px solid black;
